@@ -2,10 +2,11 @@ AUX rkt-metadata.service 242 SHA256 4e853c216abb6c6ab732a7554aa192057b70bfa67132
 AUX rkt-metadata.socket 227 SHA256 618b37860305914df77fbb0312e7ff54d9fc0c1b5b682d4cd1163fc07ec5553d SHA512 fa9044246b99161ed5903047e7b2d9c3f55d944889f263a7646d86d76ebbaf3ec86f6cd4ae2dfc5aa92169b2ac96c9dc6dbbe62ffa4437e504c539dc2b7f1600 WHIRLPOOL 3eb8f97cfb96f99b803148caa23c6882b1db6911209079a54a5aa63be27ac70adc3842be46ddca232eb547789d8b14c488fe672b56f4c3f48ec0194914cffc69
 DIST rkt-0.5.5.tar.gz 1161492 SHA256 ff3958288446486bdb5f488bea2961c73aceb95f6c2d3bf3393b8c79dba6f7d4 SHA512 cddd61b75134c4082ddac50af2fa3500f3d5f1a80171284e972bfa3714ea4fe72ac40108c66efdf5ed5589ed0df3a1cf90e095694b47de1610cc56caa12a0dab WHIRLPOOL 89c9c6e710104ee7b5b551b5e0d8cb9fc0c1bab66b3774e334a7f802188dff46ed94d6f4f93f598066308788c1f2e8d1c718e9a42b3f082e18a617c3b8599d6d
 DIST rkt-0.5.6.tar.gz 1186043 SHA256 bae39568c9e980245b13309ba89eac1f31ba8e29d7ccf3e0f85b75c34ae57a7d SHA512 cbd69991d880a5cddecfd4afdbc81c8508661cd5ba9880eff322314f1ab840676a2db36061b8624336fb15f8a270818bf799a28ae6b51982d3df71842845bdd3 WHIRLPOOL 1b8027bd28b78b8d26ff29ad286be76c37fb6a5c2da0f8b764d20960dd0f0f4ae7cf5798fe1c04549c9ad453cd3434f70a8f2ccc38192e1c5cce57da4a42af4f
-DIST rkt-0.7.0.tar.gz 1312745 SHA256 1e5996c9c26a69f107d9d4f8dd2a3e55ca3a9b8491ecbd9fe2dfe423c7c384ce SHA512 09c142a1edd3876476d425481e45d1167f4da1eb88fe8c00fb18cf0878851ad5228cdbbd4a5a20f0f6b4fc1634bc68c592bbf22c89a5a51881e7bd12b8ca4102 WHIRLPOOL 5db5f191948379d48298f360218b40d5ff67b48583c56993eb719582db875611fc4d522f711100f7c25bca5aa647bb337e5d3884b884b88ae4820e1e364a9886
+DIST rkt-pxe-709.0.0.img 148919232 SHA256 d0df52bee7134fdeb6bc4d973e7ff651979894c0895423e2e9a0dd35279e7c3b SHA512 dc2f70eb29ebfe32b66201fc7fe3a343eee66feb2ad5fa1635bb4a979252440e378d28496f567e8a7761942a9e42e1f846626626e81ec9be38f4980cd4a8db99 WHIRLPOOL 72960971ad2e97e13305b0c21496b306c43185aee94c369d2ce3aad522701926a9cb0fbbd250b789f4beadbda3f872ea1a007943545279c0d904c673cc32fd93
+DIST rkt-pxe-738.1.0.img 151780780 SHA256 805a4c491281553c8927f3dd1a7bec50cca29209d0a7264870e7155d794ecbe6 SHA512 7774cc64dfa874f08f48cba0c15103e9eca86ffd87dcb24f765a9b56074e72f6862a663a4007a0a7dd296740ae91bf4edf7290fa35659b0b1572fe2f5dad3256 WHIRLPOOL 5973a6036d650c576bb0bd365c8c9ea35776501c1fd2baf1d7c00d06496fab35e9c796096ef89b095e7a922e2062dce6c0d1c85cd3101022e0aca84277d18cb9
 EBUILD rkt-0.5.5.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
 EBUILD rkt-0.5.6.ebuild 1246 SHA256 c7d31c4c3f4d7cd9219314a13e9b6e9c0594a9f4b3b103a6b1cd68b8b60ffd4a SHA512 f8bb8ec39e831aea1fc8f587c03a3cfa0fd0c198652880a4b3f6fc3a444cccda22e87d106a49e7cd79e04e0b4a25d8441e58be5fdbff39bb9003f545377b9c4a WHIRLPOOL e969b7990223317972fa55a951fe36a0612fdb564ff881a310d542cac7ceaa6e2949ab6c7dd02ca35a5bc4f0138e909d9f4ea9a10fa8949612c4355656bfe533
-EBUILD rkt-0.7.0-r2.ebuild 2299 SHA256 c6fa540e041e42405837d921ba48cea167c3e17cde15cc4162a232adea30aaec SHA512 f887eb9fd9b4bff759dbbdcab5b9238fe4b62de0629057118347d44fa492ceb34a8e6435c0c716f3a291fbdadaccfb4730b090cb6881864f4291029005b7584f WHIRLPOOL 82b901f1c45702c2d423a7b305b6636d6aff949a989eeec4952dd0364e59c8e17f31db386488e54314b39e911de3c186c19b513609416b25afe4f3648dfe3a24
-EBUILD rkt-9999.ebuild 2299 SHA256 c6fa540e041e42405837d921ba48cea167c3e17cde15cc4162a232adea30aaec SHA512 f887eb9fd9b4bff759dbbdcab5b9238fe4b62de0629057118347d44fa492ceb34a8e6435c0c716f3a291fbdadaccfb4730b090cb6881864f4291029005b7584f WHIRLPOOL 82b901f1c45702c2d423a7b305b6636d6aff949a989eeec4952dd0364e59c8e17f31db386488e54314b39e911de3c186c19b513609416b25afe4f3648dfe3a24
-MISC ChangeLog 1300 SHA256 29bb241b325db4aca9ce237f2f66ac7e756537dd31bef5808b8432d643de493a SHA512 80bde3b34ab8f7c6cb066a7825ea2b74c11b73a0b3d23c1e1923d80fb7b6957a6ebdd123b35647e8909f98af3834801d69b393c4edeccf9a87831bf7ae3f50bf WHIRLPOOL 588fdc2e1b9779b61ed8df7553684a02432d04e5028539ead1490dcc8497afb6cc3ba5acbe52f5f179d7e9b03d5e13baf92d925eefa5258fedd430ea2b2dd676
-MISC metadata.xml 834 SHA256 be0a650eba950e3f8783aba35affca25aeaab2b226e8de199843b81d49cdfc9c SHA512 58d241b528876af21153ad80da9249622120dc12af0d742876c1a799899fb855ded737141ceff7c4c37c96e53c4adb4026e003a664a0dd8b65bccb6114990683 WHIRLPOOL 79673dc22e97c0a7849d9749209ccc88fad5c8edb5a24cf22f0a9310228303223952ce0b27f488570c4ddb38d4c0b19b36147a48eff93fe276440e65565e75ac
+EBUILD rkt-0.7.0.ebuild 2705 SHA256 25c3b3202caade918f22499122ad0f5806bbc506798e635c01fbe2fdc783557d SHA512 ba1358ca5228d69bd80537ddfcf226b73ac391fcd5947d37b4aa574e57ea9308ad92863c32267cdb2698d76ed4361a2cb9a5fab1c859464e03787232555b3c96 WHIRLPOOL f2379bbaef8fbe096b76175247f0c83b63d7b3f26bbfa48cb184059ee1ab88fb0307e3fcaf254d1958480b25d90907f4dd9264d0d79614977ca2bc556454c8eb
+EBUILD rkt-9999.ebuild 2705 SHA256 25c3b3202caade918f22499122ad0f5806bbc506798e635c01fbe2fdc783557d SHA512 ba1358ca5228d69bd80537ddfcf226b73ac391fcd5947d37b4aa574e57ea9308ad92863c32267cdb2698d76ed4361a2cb9a5fab1c859464e03787232555b3c96 WHIRLPOOL f2379bbaef8fbe096b76175247f0c83b63d7b3f26bbfa48cb184059ee1ab88fb0307e3fcaf254d1958480b25d90907f4dd9264d0d79614977ca2bc556454c8eb
+MISC ChangeLog 1430 SHA256 b23044d3525d4fc241f0589d796eb08d325139048fcbeb01eb8dcfa10da66e03 SHA512 90eccdfa79da7b0fa564a7800479ee4bd65adbf5a9f2271fc2235fbfb580654419e0c67427f50270d8c52a2b0137478d41ad1759935703f3c60fb468057058a6 WHIRLPOOL 64e251e9df36ed47681ce7d7b0509546dda2906745c5068af0e3b0715288c8878aebef8779c908204250b735949cb158d23918bc3d7342e9778549c6e3f8e83f
+MISC metadata.xml 834 SHA256 e1e716d2037be870a722e03b1da407f1cabcccc9d717c44d714469f1c489833f SHA512 9eb76a0163a202cadc08c17d945bfc5aa530c90f7215542592f893cd8d297d51aa5e6e683dfa2a46cd3615aebee4d80a5f0488e77a9af4d6f91352cdb98a1b65 WHIRLPOOL f9cc37c5e2243b01af2ff82933c6a309430254c20ebb251c1adedbfe70e6dd2c8909c1c6cf455cbb0db5309ad675440585b74a0cce2ca925bf80d818ac9f008f
