@@ -2,7 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<maintainer>
-		<email>code@stefanjunker.de</email>
+		<email>mail@stefanjunker.de</email>
 		<name>Stefan Junker</name>
 	</maintainer>	
 	<longdescription lang="en">
