@@ -1,3 +1,6 @@
+  21 Jul 2015; Stefan Junker <mail@stefanjunker.de> rkt-9999.ebuild:
+  >=app-emulation/rkt-0.7: download coreos img with portage
+
 *rkt-0.7.0-r1 (17 Jul 2015)
 
   17 Jul 2015; Stefan Junker <mail@stefanjunker.de> +rkt-0.7.0-r1.ebuild,
